[project]
name = "flowchart-agent"
version = "0.1.0"
description = "LangChain-based agent that generates and refines Mermaid flowcharts"
authors = [{ name = "Flowchart Agent" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=1.0.0",
    "langchain-openai>=1.0.0",
    "langchain-core>=1.0.0",
    "pydantic>=2.7.4",
    "typer>=0.12.3",
    "jinja2>=3.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
]

[project.scripts]
flowchart-agent = "flowchart_agent.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
index-url = "https://pypi.org/simple"
